# SFML_Game_Development_Framework

./: .clang-format  .gitignore  CMakeLists.txt  Config.hpp  Game.cpp  Game.hpp  Makefile  README.md  main.cpp
Entities/: Enemy.cpp  Enemy.hpp  IEntity.hpp  Player.cpp  Player.hpp
Managers/: Collision.cpp  Collision.hpp  Graphics.cpp  Graphics.hpp  InputManager.hpp  ResourceManager.hpp
Scenes/: GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  IGameState.hpp  MainMenuState.cpp  MainMenuState.hpp
